--- a/credit_risk_classification.ipynb
+++ b/credit_risk_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,21 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "29717    0\n",
-       "41204    0\n",
-       "20332    0\n",
-       "11903    0\n",
-       "37885    0\n",
+       "47827    0\n",
+       "76025    1\n",
+       "15718    0\n",
+       "22300    0\n",
+       "32699    0\n",
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -256,54 +256,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>39080</th>\n",
-       "      <td>9800.0</td>\n",
-       "      <td>7.303</td>\n",
-       "      <td>49300</td>\n",
-       "      <td>0.391481</td>\n",
+       "      <th>47357</th>\n",
+       "      <td>10400.0</td>\n",
+       "      <td>7.555</td>\n",
+       "      <td>51700</td>\n",
+       "      <td>0.419729</td>\n",
        "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60878</th>\n",
-       "      <td>8200.0</td>\n",
-       "      <td>6.597</td>\n",
-       "      <td>42700</td>\n",
-       "      <td>0.297424</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5001</th>\n",
-       "      <td>10600.0</td>\n",
-       "      <td>7.619</td>\n",
-       "      <td>52300</td>\n",
-       "      <td>0.426386</td>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>22300</td>\n",
+       "      <td>21700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40667</th>\n",
-       "      <td>9500.0</td>\n",
-       "      <td>7.167</td>\n",
-       "      <td>48000</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18000</td>\n",
+       "      <th>75904</th>\n",
+       "      <td>19000.0</td>\n",
+       "      <td>11.186</td>\n",
+       "      <td>85900</td>\n",
+       "      <td>0.650757</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16434</th>\n",
-       "      <td>8800.0</td>\n",
-       "      <td>6.885</td>\n",
-       "      <td>45400</td>\n",
-       "      <td>0.339207</td>\n",
+       "      <th>25647</th>\n",
+       "      <td>9300.0</td>\n",
+       "      <td>7.098</td>\n",
+       "      <td>47400</td>\n",
+       "      <td>0.367089</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>15400</td>\n",
+       "      <td>17400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72766</th>\n",
+       "      <td>9600.0</td>\n",
+       "      <td>7.197</td>\n",
+       "      <td>48300</td>\n",
+       "      <td>0.378882</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18006</th>\n",
+       "      <td>10100.0</td>\n",
+       "      <td>7.402</td>\n",
+       "      <td>50300</td>\n",
+       "      <td>0.403579</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20300</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -311,21 +311,21 @@
       ],
       "text/plain": [
        "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
-       "39080     9800.0          7.303            49300        0.391481   \n",
-       "60878     8200.0          6.597            42700        0.297424   \n",
-       "5001     10600.0          7.619            52300        0.426386   \n",
-       "40667     9500.0          7.167            48000        0.375000   \n",
-       "16434     8800.0          6.885            45400        0.339207   \n",
+       "47357    10400.0          7.555            51700        0.419729   \n",
+       "75904    19000.0         11.186            85900        0.650757   \n",
+       "25647     9300.0          7.098            47400        0.367089   \n",
+       "72766     9600.0          7.197            48300        0.378882   \n",
+       "18006    10100.0          7.402            50300        0.403579   \n",
        "\n",
        "       num_of_accounts  derogatory_marks  total_debt  \n",
-       "39080                4                 0       19300  \n",
-       "60878                2                 0       12700  \n",
-       "5001                 5                 1       22300  \n",
-       "40667                4                 0       18000  \n",
-       "16434                3                 0       15400  "
+       "47357                4                 1       21700  \n",
+       "75904               12                 2       55900  \n",
+       "25647                3                 0       17400  \n",
+       "72766                4                 0       18300  \n",
+       "18006                4                 1       20300  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "35030           0       0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -590,20 +590,23 @@
      "output_type": "stream",
      "text": [
       "Training Data Score: 0.9914878250103177\n",
-      "Testing Data Score: 0.9924164259182832\n"
+      "Testing Data Score: 0.9924164259182832\n",
+      "Balanced Accuracy Score: 0.9442676901753825\n"
      ]
     }
    ],
    "source": [
-    "# Print the score of the model\n",
+    "# Print the balanced_accuracy_score of the model\n",
     "# YOUR CODE HERE!\n",
+    "# classifier.score we learned followed by the balanced_accuracy_score we did not learn in class.\n",
     "print(f\"Training Data Score: {classifier.score(X_train, y_train)}\")\n",
-    "print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")"
+    "print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")\n",
+    "print(f\"Balanced Accuracy Score: {balanced_accuracy_score(y_test, predictions)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +636,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Health Loans</th>\n",
+       "      <th>Healthy Loans</th>\n",
        "      <td>18679</td>\n",
        "      <td>80</td>\n",
        "    </tr>\n",
@@ -648,11 +651,11 @@
       ],
       "text/plain": [
        "                   Predicted Healthy Loans  Predicted Non-Healthy Loans\n",
-       "Health Loans                         18679                           80\n",
+       "Healthy Loans                        18679                           80\n",
        "Non-Healthy Loans                       67                          558"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,14 +669,14 @@
     "\n",
     "c_matrix = confusion_matrix(y_test, predictions)\n",
     "confusion_matrix_df = pd.DataFrame(c_matrix,\n",
-    "                                   index=[\"Health Loans\",\"Non-Healthy Loans\"],\n",
+    "                                   index=[\"Healthy Loans\",\"Non-Healthy Loans\"],\n",
     "                                   columns=[\"Predicted Healthy Loans\", \"Predicted Non-Healthy Loans\"])\n",
     "confusion_matrix_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +717,8 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** According to the classification report the model predicted correctly: healthy loans (0) 100% of the time and high-risk loans (1) 87% of the time.\n"
+    "**Answer:** According to the classification report the model predicted correctly: healthy loans (0) 100% of the time and high-risk loans (1) 87% of the time.\n",
+    "The Balanced Accuracy Score is 0.9442676901753825.\n"
    ]
   },
   {
@@ -742,30 +746,53 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the RandomOverSampler module form imbalanced-learn\n",
-    "# from imblearn.over_sampling import RandomOverSampler\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
     "# YOUR CODE HERE!\n",
-    "\n",
+    "ROS_model = RandomOverSampler(random_state=1)\n",
+    "ROS_model\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "ROS_model.fit(X_train, y_train)\n",
+    "X_over, y_over = ROS_model.fit_resample(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    56277\n",
+       "1    56277\n",
+       "Name: loan_status, dtype: int64"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "y_over.value_counts()\n"
    ]
   },
   {
@@ -778,19 +805,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
     "# YOUR CODE HERE!\n",
+    "LR_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
     "# YOUR CODE HERE!\n",
+    "LR_model.fit(X_over, y_over)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "LR_prediction = LR_model.predict(X_test)"
    ]
   },
   {
@@ -809,32 +839,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced Accuracy Score: 0.9959744975744975\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "print(f\"Balanced Accuracy Score: {balanced_accuracy_score(y_test, LR_prediction)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted Healthy Loans</th>\n",
+       "      <th>Predicted Non-Healthy Loans</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Healthy Loans</th>\n",
+       "      <td>18668</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Non-Healthy Loans</th>\n",
+       "      <td>2</td>\n",
+       "      <td>623</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Predicted Healthy Loans  Predicted Non-Healthy Loans\n",
+       "Healthy Loans                        18668                           91\n",
+       "Non-Healthy Loans                        2                          623"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "c1_matrix = confusion_matrix(y_test, LR_prediction)\n",
+    "confusion1_matrix_df = pd.DataFrame(c1_matrix,\n",
+    "                                   index=[\"Healthy Loans\",\"Non-Healthy Loans\"],\n",
+    "                                   columns=[\"Predicted Healthy Loans\", \"Predicted Non-Healthy Loans\"])\n",
+    "confusion1_matrix_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     18759\n",
+      "           1       0.87      1.00      0.93       625\n",
+      "\n",
+      "    accuracy                           1.00     19384\n",
+      "   macro avg       0.94      1.00      0.96     19384\n",
+      "weighted avg       1.00      1.00      1.00     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "print(classification_report(y_test, LR_prediction))"
    ]
   },
   {
@@ -852,7 +964,8 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** According to the classification report the model predicted correctly: healthy loans (0) 100% of the time and high-risk loans (1) 87% of the time.\n",
+    "The Balanced Accuracy Score: 0.9959744975744975!!!! This has improved to a very high rate of success."
    ]
   }
  ],
